test/compile_errors/err_collection_literal_empty_sequence_no_expected.w
//! expect-check-fail: empty sequence literal requires expected type

fn main:
    let values = []
